# nomad-agent

./: .dockerignore  .env.example  .gitignore  BENCHMARK.md  Dockerfile  HANDOFF.md  IMPROVEMENT_PLAN.md  README.md  SIGNOFF.md  SYSTEM_DESIGN.md  pyproject.toml  railway.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: pipeline-reviewer.md  schema-sync-checker.md
.claude/rules/: agent-architecture.md  coding-standards.md  db-contract.md
.claude/skills/: add-research-agent.md  add-tool.md  run-eval.md  swap-llm-provider.md
.github/workflows/: ci.yml
app/: auth.py  cache.py  config.py  eval.py  images.py  main.py  observability.py  pool_filter.py  schemas.py  signals.py
app/agents/: base.py  google_blog.py  reddit.py  synthesizer.py  trending.py  youtube_longform.py  (+1 more)
docs/: cache-architecture.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
samples/: goa-december.json  manali-monsoon.json  puri-odisha-2day.json  rajasthan-dec20-31.json  rajasthan-december.json  singapore-4day.json
scripts/: backfill_images.py  eval_destinations.py  refresh_trending.py  run_agent_locally.py  run_google_blog_agent_locally.py  run_pipeline.py  run_reddit_agent_locally.py  run_youtube_agent_locally.py  run_youtube_longform_agent_locally.py
tests/: test_cache.py  test_eval.py  test_geo.py  test_images.py  test_place_image.py  test_reddit_agent.py  test_reddit_tool.py  test_schemas.py  test_signals.py  test_skill_loader.py  test_synthesizer.py  test_youtube_agent.py  test_youtube_longform_agent.py  test_youtube_tool.py
(+32 files in other folders)
